fix: change destructive color to be more contrasting in dark modes

--- a/src/routes/(marketing)/components/sections/features/showcases/themes/blue.css
+++ b/src/routes/(marketing)/components/sections/features/showcases/themes/blue.css
@@ -35,7 +35,7 @@
 	--muted-foreground: 215 20.2% 65.1%;
 	--accent: 217.2 32.6% 17.5%;
 	--accent-foreground: 210 40% 98%;
-	--destructive: 0 62.8% 30.6%;
+	--destructive: 0 72.22% 50.59%;
 	--destructive-foreground: 210 40% 98%;
 	--border: 217.2 32.6% 17.5%;
 	--input: 217.2 32.6% 17.5%;
