--- a/src/routes/(marketing)/components/sections/features/showcases/themes/green.css
+++ b/src/routes/(marketing)/components/sections/features/showcases/themes/green.css
@@ -35,8 +35,8 @@
 	--muted-foreground: 240 5% 64.9%;
 	--accent: 12 6.5% 15.1%;
 	--accent-foreground: 0 0% 98%;
-	--destructive: 0 62.8% 30.6%;
-	--destructive-foreground: 0 85.7% 97.3%;
+	--destructive: 0 72.22% 50.59%;
+	--destructive-foreground: 0 0% 98%;
 	--border: 240 3.7% 15.9%;
 	--input: 240 3.7% 15.9%;
 	--ring: 142.4 71.8% 29.2%;
